# DE_p3

./: .env  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  consultas_mongodb.md  main.py  pyproject.toml  test_functions.py
aditional_documents/: ACTUALIZACION_DOCUMENTACION.md  MODELO_RELACIONAL_RESUMEN.md  PROJECT_STRUCTURE.md  RESUMEN_CAMBIOS.md  consultas_mongodb_nuevo_modelo.md
src/: __init__.py  config.py  processing.py  utils.py
src/de_p3/: __init__.py  config.py  processing.py  utils.py
